fixed the error of bleeding over

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -30,9 +30,3 @@
     width: auto;
 }
 
-.footer {
-    background: #dee0e3;
-    border-top: 6px solid #057200;
-    margin-top: 3rem;
-    padding-top: 1.5rem;
-}
